codegen/ui_tests/return_pointer.stderr
error: cannot return a pointer to Rhai
  --> $DIR/return_pointer.rs:12:33
   |
12 | pub fn test_fn(input: Clonable) -> *const str {
   |                                 ^^^^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> $DIR/return_pointer.rs:18:39
   |
18 |     println!("{}", unsafe { let ptr = test_fn(n); *ptr });
   |                                       ^^^^^^^ not found in this scope
